Remove dot at end from extension description
Consistency tweak for extension active on translatewiki.net
Description on Special:Version does not end with a dot

Change-Id: I433376cb25cc3fc9b527fd449de5e9824e490a84

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,5 +4,5 @@
 			"Eric Evans"
 		]
 	},
-	"eventbus-desc": "Propagates change information to a RESTful event service."
+	"eventbus-desc": "Propagates change information to a RESTful event service"
 }
